<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:minHeight="?attr/actionBarSize"
        >
    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/ll"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/padding_10"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/roomname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_2"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            />
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="textEmailAddress"
            />
        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            />

        <Button
            android:id="@+id/addParticipantButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:text="@string/add" />

    </LinearLayout>
    <TextView
        android:id="@+id/addParticipantLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_10"
        android:textStyle="bold"
        android:layout_below="@id/ll"
        android:visibility="gone"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/add_participant" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@id/addParticipantLabel"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding_10"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/sendPasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="@string/send_pass" />
</RelativeLayout>
