<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_normal">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:minHeight="?attr/actionBarSize"
            android:title="@string/room_booking"
            ></android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_48"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:paddingTop="@dimen/padding_normal"
                    android:text="@string/room_name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/room_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"

                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#d3d3d3" />

                <TextView
                    android:id="@+id/reservation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/reservation_info"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="@dimen/margin_4" />

                <TextView
                    android:id="@+id/setTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/tv_18"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:background="@drawable/gradient"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tv_18"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/capacity"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:textAlignment="viewStart"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#d3d3d3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/floor"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:background="@color/light_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/size"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:background="@color/light_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/equipments"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_18"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/equipment_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:importantForAccessibility="yes"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_18" />


                <TextView
                    android:id="@+id/avail_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:importantForAccessibility="yes"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_18" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/book_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient"
        android:text="@string/book"
        android:textColor="@color/white" />
</RelativeLayout>
